Fix code overflow

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -2069,7 +2069,7 @@ body .guides .guides-section-white {
     border: none;
     font-size: 14px;
     overflow-y: scroll;
-    text-overflow: ellipsis;
+    text-overflow: initial;
     max-height: 100vh;
     margin: 10px 0;
   }
